fix scroll down button position on tablet

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,7 +100,7 @@
   }
 
   .scroll-down-button {
-    top: calc(100vh - 90px);
+    top: calc(100vh - 165px);
   }
 
   .kayon-top-shapes {
